ensure collapsed result item interactables reduce in grid column size at breakpoint

--- a/src/features/ResultItem/components/ResultItem/ResultItem.module.scss
+++ b/src/features/ResultItem/components/ResultItem/ResultItem.module.scss
@@ -204,9 +204,12 @@
   }
   .top {
     display: grid;
-    grid-template-columns: 1fr 112px 110px 90px 24px;
+    grid-template-columns: 1fr 32px 110px 90px 24px;
     column-gap: $s;
     padding: $m $s 0 $s;
+    @media screen and (min-width: 1240px) {
+      grid-template-columns: 1fr 112px 110px 90px 24px;
+    }
   }
   .accordionPanel {
     grid-column: 1/6;
